# qt-assistant.nvim

./: .clang-format  .gitignore  .luarc.json  CHANGELOG.md  CONTRIBUTING.md  FORMATTER_SETUP.md  GITHUB_RELEASE.md  README.md  README_zh.md  RELEASE_CHECKLIST.md  RELEASE_INFO.md  RELEASE_SUMMARY_v1.3.0.md  install_clang_format.sh  test_config.lua  test_formatter.lua  test_load.lua
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doc/: qt-assistant.txt
docs/: CONFIGURATION_TROUBLESHOOTING.md  KEYBINDINGS.md  NEW_FEATURES.md  QUICK_START_v1.3.0.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.3.0.md  SCRIPT_KEYMAPS_REFERENCE.md  THIRD_PARTY_USAGE.md  WINDOWS_QT5_SUPPORT.md  WINDOWS_QT5_VS2017_GUIDE.md  WINDOWS_SCRIPTS_GUIDE.md
example/: init_example.lua  windows_setup_example.bat
examples/: basic.lua  lazy.lua  windows_qt5_config.lua
lua/: qt-assistant.lua
lua/qt-assistant/: build_manager.lua  cmake.lua  config.lua  core.lua  designer.lua  file_manager.lua  formatter.lua  history.lua  init.lua  keymaps.lua  lsp.lua  new_scripts.lua  project_manager.lua  qt_version.lua  scripts.lua  system.lua  templates.lua  ui.lua
plugin/: qt-assistant.lua  qt-assistant.vim
release/: qt-assistant.nvim-v1.0.0.tar.gz.sha256  qt-assistant.nvim-v1.0.0.zip.sha256
release/qt-assistant.nvim-v1.0.0/: CHANGELOG.md  README.md
releases/: RELEASE_NOTES_v1.1.0.md  qt-assistant-v1.1.0.tar.gz.sha256  qt-assistant-v1.1.0.zip.sha256
releases/v1.1.0/: CHANGELOG.md  INSTALL.md  LICENSE
releases/v1.3.0/: RELEASE_INFO.md  qt-assistant-v1.3.0.tar.gz.sha256  qt-assistant-v1.3.0.zip.sha256
scripts/: cxx_standard_examples.bat  deploy_qt_dlls.bat  fix_msvc_project.bat  release.sh  release_v1.3.0.sh  smoke_generate.bat  smoke_generate.ps1  test.sh  vs2017_setup.bat
test_project/: .clangd  CMakeLists.txt
test_project/.cache/clangd/index/: main.cpp.C7FAE0AE3E00DD52.idx  mainwindow.cpp.4FA25B8FFA057C96.idx  mainwindow.h.9CB52846524E2B4F.idx
test_project/include/: mainwindow.h
test_project/src/: mainwindow.cpp
(+39 files in other folders)
